--- a/TFG/src/app/navigation/navigation.component.css
+++ b/TFG/src/app/navigation/navigation.component.css
@@ -1,17 +1,22 @@
-.sidenav-container {
+sidenav-container {
   height: 100%;
 }
 
-.sidenav {
+sidenav {
   width: 200px;
 }
 
-.sidenav .mat-toolbar {
+sidenav .mat-toolbar {
   background: inherit;
 }
 
-.mat-toolbar.mat-primary {
+mat-toolbar.mat-primary {
   position: sticky;
   top: 0;
   z-index: 1;
+}
+
+img {
+  max-width: 10%;
+  height: auto;
 }
