--- a/TFG/src/app/navigation/navigation.component.html
+++ b/TFG/src/app/navigation/navigation.component.html
@@ -1,31 +1,19 @@
-<mat-sidenav-container class="sidenav-container">
-  <mat-sidenav #drawer class="sidenav" fixedInViewport
-      [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
-      [mode]="(isHandset$ | async) ? 'over' : 'side'"
-      [opened]="(isHandset$ | async) === false">
-    <mat-toolbar>Menu</mat-toolbar>
-    <mat-nav-list>
-      <!-- <a mat-list-item href="#">Link 1</a>
-      <a mat-list-item href="#">Link 2</a>
-      <a mat-list-item href="#">Link 3</a> -->
-      <a mat-list-item routerLink="/fifo">Planificador FIFO</a>
-      <a mat-list-item routerLink="/lifo">Planificador LIFO</a>
-      <a mat-list-item routerLink="/lru">Planificador LRU</a>
-    </mat-nav-list>
-  </mat-sidenav>
-  <mat-sidenav-content>
-    <mat-toolbar color="primary">
-      <button
-        type="button"
-        aria-label="Toggle sidenav"
-        mat-icon-button
-        (click)="drawer.toggle()"
-        *ngIf="isHandset$ | async">
+<mat-toolbar color="warn">
+    <mat-toolbar-row>
+      <button type="button" aria-label="Toggle sidenav" mat-icon-button (click)="drawer.toggle()" color="primary">
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
-      <span>TFG</span>
-    </mat-toolbar>
-    <!-- Add Content Here -->
-    <app-dashboard></app-dashboard>
-  </mat-sidenav-content>
-</mat-sidenav-container>
+      <span><img src="./assets/logo_uah.png"></span>
+    </mat-toolbar-row>
+  </mat-toolbar>
+  <mat-sidenav-container autosize>
+    <mat-sidenav #drawer mode="side" opened role="navigation">
+      <mat-nav-list>
+        <a mat-list-item routerLink='/fifo'>Fifo</a>
+        <a mat-list-item routerLink='/lru'>LRU</a>
+      </mat-nav-list>
+    </mat-sidenav>
+    <mat-sidenav-content>
+      <router-outlet></router-outlet>
+    </mat-sidenav-content>
+  </mat-sidenav-container>
