--- a/TFG/src/app/navigation/navigation.component.css
+++ b/TFG/src/app/navigation/navigation.component.css
@@ -1,12 +1,22 @@
-sidenav-container {
+mat-sidenav-container {
   height: 100%;
 }
 
-sidenav {
+mat-sidenav {
   width: 200px;
 }
 
-sidenav .mat-toolbar {
+mat-icon {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  box-sizing: border-box;
+  padding: 0 16px;
+  position: relative;
+  height: inherit;
+}
+
+mat-sidenav.mat-toolbar {
   background: inherit;
 }
 
