menu principal con grid

--- a/TFG/src/app/base/base.component.css
+++ b/TFG/src/app/base/base.component.css
@@ -1,5 +1,12 @@
-.content-container {
-    min-height: 100vh;
-    box-sizing: border-box;
-    padding: 25px;
+
+mat-grid-tile {
+    width: 100%;
+    height: 50%;
+    background-color: lightgrey;
+    border-radius: 30px;
+
 }
+
+.grid-container {
+    grid-row-gap: 50px;
+  }
