--- a/TFG/src/app/navigation/navigation.component.css
+++ b/TFG/src/app/navigation/navigation.component.css
@@ -3,18 +3,49 @@ mat-sidenav-container {
 }
 
 mat-sidenav {
-  width: 200px;
+  width: 250px;
+  margin: 16px;
+  border-right: none;
+  background: "primary";
+  border-radius: 10px;
+  padding: 16px;
+  text-align: left;
+}
+mat-sidenav-content {
+  height: 100%;
+  width: 100%;
 }
 
-mat-icon {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  box-sizing: border-box;
-  padding: 0 16px;
-  position: relative;
-  height: inherit;
+.mat-icon {
+  margin-right: 15px;
+  vertical-align: middle;
 }
+
+.content {
+  height: calc(100vh - 98px);
+  margin: 34px;
+  margin-left: 100px;
+  display: flex;
+  justify-content: left;
+  align-items: left;
+
+  font-size: 2rem;
+  color: "dark";
+
+  border-radius: 10px;
+}
+
+/*.a{
+  display:flex;
+}
+
+.a > mat-icon {
+  margin-left:10%;
+}
+
+.a > a {
+  margin-left: 7%;
+}*/
 
 mat-sidenav.mat-toolbar {
   background: inherit;
@@ -27,6 +58,6 @@ mat-toolbar.mat-primary {
 }
 
 img {
-  max-width: 10%;
+  max-width: 18%;
   height: auto;
 }
