--- a/TFG/src/app/navigation/navigation.component.html
+++ b/TFG/src/app/navigation/navigation.component.html
@@ -1,16 +1,16 @@
-<mat-toolbar color="warn">
+<mat-toolbar color="primary">
     <mat-toolbar-row>
-      <button type="button" aria-label="Toggle sidenav" mat-icon-button (click)="drawer.toggle()" color="primary">
+      <button type="button" aria-label="Toggle sidenav" mat-icon-button (click)="drawer.toggle()" color="dark">
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
-      <span><img src="./assets/logo_uah.png"></span>
+      <span><img src="./assets/logo_uah_light.png"></span>
     </mat-toolbar-row>
   </mat-toolbar>
   <mat-sidenav-container autosize>
     <mat-sidenav #drawer mode="side" opened role="navigation">
       <mat-nav-list>
         <a mat-list-item routerLink='/base'> <mat-icon>home</mat-icon>Inicio</a>
-        <a mat-list-item routerLink='/fifo'>Planificadores</a>
+        <a mat-list-item routerLink='/fifo'> <mat-icon>dns</mat-icon>Planificadores</a>
       </mat-nav-list>
     </mat-sidenav>
     <mat-sidenav-content>
