json mas o menos
solo tarea y command

--- a/TFG/src/app/navigation/navigation.component.html
+++ b/TFG/src/app/navigation/navigation.component.html
@@ -10,7 +10,7 @@
     <mat-sidenav #drawer mode="side" opened role="navigation">
       <mat-nav-list>
         <a mat-list-item routerLink='/base'> <mat-icon>home</mat-icon>Inicio</a>
-        <a mat-list-item routerLink='/fifo'> <mat-icon>dns</mat-icon>Planificadores</a>
+        <a mat-list-item routerLink='/planificadores'> <mat-icon>dns</mat-icon>Planificadores</a>
       </mat-nav-list>
     </mat-sidenav>
     <mat-sidenav-content>
