actualizacion pagina de ejemplos
faltan retoques al generar las tablas, ya que se muestra siempre uno

--- a/TFG/src/app/planificadores/planificadores-list/planificadores-list.component.html
+++ b/TFG/src/app/planificadores/planificadores-list/planificadores-list.component.html
@@ -122,7 +122,7 @@
             </mat-grid-tile-header>
         </mat-grid-tile>
         <mat-grid-tile>
-            <code><p>{{JSONdatos}}</p></code>
+            <pre><p>{{JSONdatos}}</p></pre>
             <mat-grid-tile-header>
                 Archivo JSON
             </mat-grid-tile-header>
