revert cambios carrousel

--- a/TFG/src/app/base/base.component.html
+++ b/TFG/src/app/base/base.component.html
@@ -1,7 +1,7 @@
 
 <H1>PÁGINA DE INICIO</H1>
 
-<!-- <mat-grid-list cols="3" rowHeight="200" [gutterSize]="'10px'">
+ <mat-grid-list cols="3" rowHeight="200" [gutterSize]="'10px'">
   <mat-grid-tile colspan="2">Tile 1
     <mat-grid-tile-header>
       First In First Out (FIFO)
@@ -41,53 +41,10 @@
     Tile 7</mat-grid-tile>
   <mat-grid-tile colspan="2">
     <mat-grid-tile-header>
-      Round Robins
+      Round Robin
     </mat-grid-tile-header>Tile 8
   </mat-grid-tile>
 </mat-grid-list>
 
--->
 
 
-<mat-grid-list rowHeight="400">
-    <mat-grid-tile>
-      
-      <!-- Carousel -->
-<div id="demo" class="carousel slide" data-bs-ride="carousel">
-
-    <!-- Indicators/dots -->
-    <div class="carousel-indicators">
-      <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
-      <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
-      <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
-    </div>
-  
-    <!-- The slideshow/carousel -->
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="la.jpg" alt="Los Angeles" class="d-block w-100">
-      </div>
-      <div class="carousel-item">
-        <img src="chicago.jpg" alt="Chicago" class="d-block w-100">
-      </div>
-      <div class="carousel-item">
-        <img src="ny.jpg" alt="New York" class="d-block w-100">
-      </div>
-    </div>
-  
-    <!-- Left and right controls/icons -->
-    <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon"></span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
-      <span class="carousel-control-next-icon"></span>
-    </button>
-  </div>
-  
-      <mat-grid-tile-header>
-        
-        Titulo
-
-      </mat-grid-tile-header>
-    </mat-grid-tile>
-  </mat-grid-list>
