clase queue, clases planificadores implementando shced_algorthms

--- a/TFG/src/app/navigation/navigation.component.html
+++ b/TFG/src/app/navigation/navigation.component.html
@@ -13,9 +13,9 @@
       <a mat-list-item routerLink='/base'>
         <mat-icon>home</mat-icon>Inicio
       </a>
-      <a mat-list-item routerLink='/planificadores'>
+      <!--<a mat-list-item routerLink='/planificadores'>
         <mat-icon>dns</mat-icon>Planificadores
-      </a>
+      </a>-->
 
 
       <mat-expansion-panel [class.mat-elevation-z0]="true" dense>
