pagina de inicio

--- a/TFG/src/app/navigation/navigation.component.html
+++ b/TFG/src/app/navigation/navigation.component.html
@@ -20,7 +20,7 @@
 
       <mat-expansion-panel [class.mat-elevation-z0]="true" dense>
         <mat-expansion-panel-header>
-          <mat-icon>dns</mat-icon>Planificadores
+          <mat-icon>scatter_plot</mat-icon>Planificadores <!-- dns-->
         </mat-expansion-panel-header>
         <mat-nav-list dense>
           <a mat-list-item routerLink="/planificadores">
