--- a/TFG/src/app/planificadores/planificadores-list/planificadores-list.component.html
+++ b/TFG/src/app/planificadores/planificadores-list/planificadores-list.component.html
@@ -50,14 +50,14 @@
 
                 <mat-divider></mat-divider><br>
 
-                <mat-form-field appearance="fill" class="col-6">
+                <mat-form-field appearance="fill" class="col-5">
                     <mat-label>Start time</mat-label>
                     <input matInput [formControl]="control" placeholder="Ej. 0, 1, 2..." [(ngModel)]="start_time"
                         name="start_time">
-                </mat-form-field>
+                </mat-form-field>&nbsp;
 
 
-                <mat-form-field appearance="fill" id="priority" class="col-6">
+                <mat-form-field appearance="fill" id="priority" class="col-5">
                     <mat-label>Priority</mat-label>
                     <input matInput [formControl]="control" placeholder="Ej. 4, 5, 6..." [(ngModel)]="priority"
                         name="priority">
