--- a/TFG/src/app/ejemplo-list/ejemplo-list.component.html
+++ b/TFG/src/app/ejemplo-list/ejemplo-list.component.html
@@ -3,14 +3,14 @@
 <mat-grid-list cols="2" rowHeight="400" [gutterSize]="'10px'">
     <mat-grid-tile background-color: #D8ABF3>
 
-  <mat-form-field appearance="fill" class="col-10">
+        <mat-form-field appearance="fill" class="col-10">
             <mat-label>Selecciona un ejemplo</mat-label>
             <mat-select [(value)]="selected">
                 <mat-option *ngFor="let opcion of opciones_ejemplo" [value]="opcion.opcion">
                     {{opcion.nombre}}
                 </mat-option>
             </mat-select>
-        </mat-form-field> 
+        </mat-form-field>
 
 
         <mat-grid-tile-header>
@@ -22,8 +22,8 @@
 
         <!-- <div [innerHtml]="tabla"></div>-->
 
-        
-        <div *ngIf ="selected == 'ejemplo1'">
+
+        <div *ngIf="selected == 'ejemplo1'">
             <table mat-table [dataSource]="elementos_ej1" class="mat-elevation-z8 demo-table">
                 <ng-container matColumnDef="demo-position">
                     <th mat-header-cell *matHeaderCellDef> Tarea </th>
@@ -53,9 +53,9 @@
         </div>
         <br>
 
-        
-        
-        <div *ngIf ="selected == 'ejemplo2'">
+
+
+        <div *ngIf="selected == 'ejemplo2'">
             <table mat-table [dataSource]="elementos_ej2" class="mat-elevation-z8 demo-table">
 
                 <ng-container matColumnDef="demo-position">
@@ -103,55 +103,74 @@
                 <tr mat-row *matRowDef="let row; columns: displayedColumns2;"></tr>
             </table>
         </div>
-    
-    <div *ngIf ="selected == 'ejemplo3'">
-        <table mat-table [dataSource]="elementos_ej2" class="mat-elevation-z8 demo-table">
 
-            <ng-container matColumnDef="demo-position">
-                <th mat-header-cell *matHeaderCellDef> Tarea </th>
-                <td mat-cell *matCellDef="let element"> {{element.name}} </td>
-            </ng-container>
+        <div *ngIf="selected == 'ejemplo3'">
+            <table mat-table [dataSource]="elementos_ej2" class="mat-elevation-z8 demo-table">
 
-            <ng-container matColumnDef="demo-name">
-                <th mat-header-cell *matHeaderCellDef> Start Time </th>
-                <td mat-cell *matCellDef="let element"> {{element.start_time}} </td>
-            </ng-container>
+                <ng-container matColumnDef="demo-position">
+                    <th mat-header-cell *matHeaderCellDef> Tarea </th>
+                    <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+                </ng-container>
 
-            <ng-container matColumnDef="demo-weight">
-                <th mat-header-cell *matHeaderCellDef> Priority </th>
-                <td mat-cell *matCellDef="let element"> {{element.priority}} </td>
-            </ng-container>
+                <ng-container matColumnDef="demo-name">
+                    <th mat-header-cell *matHeaderCellDef> Start Time </th>
+                    <td mat-cell *matCellDef="let element"> {{element.start_time}} </td>
+                </ng-container>
 
-            <ng-container matColumnDef="demo-symbol1">
-                <th mat-header-cell *matHeaderCellDef> Behaviour 1 </th>
-                <td mat-cell *matCellDef="let element"> {{element.behaviour1}} </td>
-            </ng-container>
+                <ng-container matColumnDef="demo-weight">
+                    <th mat-header-cell *matHeaderCellDef> Priority </th>
+                    <td mat-cell *matCellDef="let element"> {{element.priority}} </td>
+                </ng-container>
+
+                <ng-container matColumnDef="demo-symbol1">
+                    <th mat-header-cell *matHeaderCellDef> Behaviour 1 </th>
+                    <td mat-cell *matCellDef="let element"> {{element.behaviour1}} </td>
+                </ng-container>
 
 
-            <ng-container matColumnDef="demo-symbol2">
-                <th mat-header-cell *matHeaderCellDef> Behaviour 2 </th>
-                <td mat-cell *matCellDef="let element"> {{element.behaviour2}} </td>
-            </ng-container>
+                <ng-container matColumnDef="demo-symbol2">
+                    <th mat-header-cell *matHeaderCellDef> Behaviour 2 </th>
+                    <td mat-cell *matCellDef="let element"> {{element.behaviour2}} </td>
+                </ng-container>
 
-            <ng-container matColumnDef="demo-symbol3">
-                <th mat-header-cell *matHeaderCellDef> Behaviour 3 </th>
-                <td mat-cell *matCellDef="let element"> {{element.behaviour3}} </td>
-            </ng-container>
+                <ng-container matColumnDef="demo-symbol3">
+                    <th mat-header-cell *matHeaderCellDef> Behaviour 3 </th>
+                    <td mat-cell *matCellDef="let element"> {{element.behaviour3}} </td>
+                </ng-container>
 
-            <tr mat-header-row *matHeaderRowDef="displayedColumns3"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns3;"></tr>
-        </table>
-    </div>
+                <tr mat-header-row *matHeaderRowDef="displayedColumns3"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns3;"></tr>
+            </table>
+        </div>
 
         <mat-grid-tile-header>
             Tabla generada
         </mat-grid-tile-header>
     </mat-grid-tile>
-</mat-grid-list> 
+</mat-grid-list>
 <br>
 <mat-divider></mat-divider>
 <br>
 <div class="chips-div">
+    <mat-chip-listbox aria-label="Scheduling selection">
+        <mat-chip-option color="dark" (click)="pulsadoFifo()">FIFO</mat-chip-option>
+        <mat-chip-option color="primary" (click)="pulsadoPriorityPreemtive()">Priority: Preemptive</mat-chip-option>
+        <mat-chip-option color="accent" (click)="pulsadoPriorityNonPreemptive()">Priority: Non Preemptive</mat-chip-option>
+        <mat-chip-option color="warn" (click)="pulsadoRoundRobin()">Round-Robin</mat-chip-option>
+    </mat-chip-listbox>
+</div>
+<br>
+<mat-divider></mat-divider>
+<br>
+
+
+
+
+
+
+
+<!--
+                <div class="chips-div">
         <mat-chip-listbox aria-label="Scheduling selection">
                 <mat-chip-option color="dark">FIFO</mat-chip-option>
                 <mat-chip-option color="primary">Priority: Preemptive</mat-chip-option>
@@ -162,3 +181,4 @@
               <br>
               <mat-divider></mat-divider>
               <br>
+            -->
