--- a/TFG/src/app/base/base.component.html
+++ b/TFG/src/app/base/base.component.html
@@ -47,11 +47,16 @@
   </mat-grid-tile>
 </mat-grid-list> -->
 
-<div class="todos">
-  <br>
-  <H1 style="text-align:center">Guía Básica de Planificadores</H1>
-  <br>
-  <mat-tab-group>
+
+<div class="tituloCard">
+  <mat-icon class="iconCard material-icons-outlined">home</mat-icon>
+  <span> Guía Básica de Planificadores</span>
+</div>
+
+
+<div class="todos" >
+  <mat-divider> </mat-divider>
+  <mat-tab-group style="overflow:hidden !important;">
     <mat-tab label="Algoritmo de Planificación FIFO">
       <div class="texto1">
         <h3>
