--- a/TFG/src/app/planificadores/planificadores-list/planificadores-list.component.css
+++ b/TFG/src/app/planificadores/planificadores-list/planificadores-list.component.css
@@ -32,3 +32,20 @@ p.textoError {
 .mat-icon {
     display:inline-block;
 }
+
+
+.tituloCard {
+    font-size: 28px;
+    color: \$text_color;
+    margin-left: 2rem;
+    margin-bottom: 0px;
+    padding: 3rem 1rem 2rem 0rem !important;
+    background-color: #1a0d1e
+  
+  }
+  .mat-extension-panel-title {
+    background-color: #766964
+  }
+  .mat-grid-tile  {
+    background-color:#2c1435
+  }
