--- a/TFG/src/app/planificadores/planificadores-list/planificadores-list.component.html
+++ b/TFG/src/app/planificadores/planificadores-list/planificadores-list.component.html
@@ -1,11 +1,16 @@
+<div class="tituloCard">
+    <mat-icon class="iconCard material-icons-outlined">poll</mat-icon>
+    <span>  Simulador de planificadores</span>
+  </div>
+
 <div>
     <mat-accordion>
-        <mat-expansion-panel (opened)="panelOpenState = true" (closed)="panelOpenState = false">
+        <mat-expansion-panel (opened)="panelOpenState = true" (closed)="panelOpenState = false" style="background-color: aquamarine;color:black !important">
             <mat-expansion-panel-header>
-                <mat-panel-title>
+                <mat-panel-title style="color:black">
                     Instrucciones
                 </mat-panel-title>
-                <mat-panel-description>
+                <mat-panel-description style="color:black">
                     Instrucciones para llevar a cabo la simulación.
                     {{panelOpenState ? 'Pulsa para cerrar esta ventana.' : 'Pulsa para más información.'}}
                 </mat-panel-description>
@@ -50,11 +55,13 @@
 
                 <mat-divider></mat-divider><br>
 
-                <mat-form-field appearance="fill" class="col-5">
+                <mat-form-field appearance="fill" class="col-5" style="background-color: #2c1435;">
                     <mat-label>Start time</mat-label>
                     <input matInput [formControl]="control" placeholder="Ej. 0, 1, 2..." [(ngModel)]="start_time"
                         name="start_time">
-                </mat-form-field>&nbsp;
+                </mat-form-field>
+                
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
 
                 <mat-form-field appearance="fill" id="priority" class="col-5">
@@ -69,13 +76,15 @@
 
                 <h4 class="centered-title">Datos behaviour</h4><br>
 
-                <mat-form-field appearance="fill" id="type" class="col-6">
+                <mat-form-field appearance="fill" id="type" class="col-5">
                     <mat-label>Behaviour Type</mat-label>
                     <input matInput [formControl]="control" placeholder="Ej. 0, 1, 2..." type [(ngModel)]="type"
                         name="type">
                 </mat-form-field>
+                
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
-                <mat-form-field appearance="fill" id="duration" class="col-6">
+                <mat-form-field appearance="fill" id="duration" class="col-5">
                     <mat-label>Behaviour Duration</mat-label>
                     <input matInput [formControl]="control" placeholder="Ej. 9, 10, 11..." [(ngModel)]="duration"
                         name="duration">
