input file and css fixes

--- a/TFG/src/app/base/base.component.css
+++ b/TFG/src/app/base/base.component.css
@@ -48,10 +48,12 @@ mat-grid-tile {
 .tituloCard {
     font-size: 28px;
     color: \$text_color;
-    margin-left: 2rem;
+    margin-left: 0rem;
+    margin-right: 0rem;
     margin-bottom: 0px;
     padding: 3rem 1rem 2rem 0rem !important;
     background-color: #1a0d1e;
+    text-align: center;
   
   }
 
