--- a/TFG/src/app/ejemplo-list/ejemplo-list.component.html
+++ b/TFG/src/app/ejemplo-list/ejemplo-list.component.html
@@ -1,4 +1,8 @@
-<h1> Ejemplo de ejecución de los planificadores </h1><br>
+<div class="tituloCard">
+    <mat-icon class="iconCard material-icons-outlined">image_aspect_ratio</mat-icon>
+    <span> Ejemplo de ejecución de los planificadores </span>
+</div>
+
 
 <mat-grid-list cols="2" rowHeight="400" [gutterSize]="'10px'">
     <mat-grid-tile background-color: #D8ABF3>
