--- a/TFG/src/app/navigation/navigation.component.html
+++ b/TFG/src/app/navigation/navigation.component.html
@@ -27,7 +27,7 @@
             <mat-icon>poll</mat-icon>Simulador <!-- show_chart-->
           </a>
           <a mat-list-item routerLink="/ejemplo">
-            <mat-icon>image_aspect_ratio</mat-icon>Ejemplo
+            <mat-icon>image_aspect_ratio</mat-icon>Ejemplos
           </a>
         </mat-nav-list>
       </mat-expansion-panel>
