fifo example y simulador

--- a/TFG/src/app/planificadores/planificadores-list/planificadores-list.component.css
+++ b/TFG/src/app/planificadores/planificadores-list/planificadores-list.component.css
@@ -96,3 +96,9 @@ p.textoError {
   .mat-tab-group {
     width: 100%;
   }
+
+  .chips-div {
+    align-items: center;
+    display: flex;
+    justify-content: center;
+}
