--- a/TFG/src/app/planificadores/planificadores-list/planificadores-list.component.html
+++ b/TFG/src/app/planificadores/planificadores-list/planificadores-list.component.html
@@ -3,124 +3,129 @@
     <span> Simulador de planificadores</span>
 </div>
 
-<div class="todos">
 
-
-
-    <div>
-        <mat-accordion>
-            <mat-expansion-panel (opened)="panelOpenState = true" (closed)="panelOpenState = false"
-                style="background-color: aquamarine;color:black !important">
-                <mat-expansion-panel-header>
-                    <mat-panel-title style="color:black">
-                        Instrucciones
-                    </mat-panel-title>
-                    <mat-panel-description style="color:black">
-                        Instrucciones para llevar a cabo la simulación.
-                        {{panelOpenState ? 'Pulsa para cerrar esta ventana.' : 'Pulsa para más información.'}}
-                    </mat-panel-description>
-                </mat-expansion-panel-header>
-                <ol>
-                    <li>
-                        El <strong>primer paso</strong> es describir el archivo JSON en el que indicaremos los datos con
-                        los
-                        que
-                        se ejecutarán los planificadores. La información que estará contenida en el archivo viene dada
-                        en
-                        tareas. Cada una de estas tareas contiene la siguiente información:<br>
+<div>
+    <mat-accordion>
+        <mat-expansion-panel (opened)="panelOpenState = true" (closed)="panelOpenState = false"
+            style="background-color: aquamarine;color:black !important">
+            <mat-expansion-panel-header>
+                <mat-panel-title style="color:black">
+                    Instrucciones
+                </mat-panel-title>
+                <mat-panel-description style="color:black">
+                    Instrucciones para llevar a cabo la simulación.
+                    {{panelOpenState ? 'Pulsa para cerrar esta ventana.' : 'Pulsa para más información.'}}
+                </mat-panel-description>
+            </mat-expansion-panel-header>
+            <ol>
+                <li>
+                    El <strong>primer paso</strong> es describir el archivo JSON en el que indicaremos los datos
+                    con
+                    los
+                    que
+                    se ejecutarán los planificadores. La información que estará contenida en el archivo viene
+                    dada
+                    en
+                    tareas. Cada una de estas tareas contiene la siguiente información:<br>
+                    <ul>
+                        <li><strong>Start time:</strong> Valor numérico que hace referencia al instante de
+                            tiempo en
+                            la
+                            que
+                            se ejecuta la tarea.</li>
+                        <li><strong>Priority:</strong> Valor numérico que hace referencia al valor de la
+                            prioridad
+                            que
+                            tiene
+                            esta tarea respecto a otras.</li>
+                        <li><strong>Behaviour:</strong> Este campo está formado a su vez por dos: Type y
+                            Duration.
+                            Podemos
+                            tener diferentes valores para el comportamiento (behaviour) de la tarea.</li>
                         <ul>
-                            <li><strong>Start time:</strong> Valor numérico que hace referencia al instante de tiempo en
-                                la
-                                que
-                                se ejecuta la tarea.</li>
-                            <li><strong>Priority:</strong> Valor numérico que hace referencia al valor de la prioridad
-                                que
-                                tiene
-                                esta tarea respecto a otras.</li>
-                            <li><strong>Behaviour:</strong> Este campo está formado a su vez por dos: Type y Duration.
-                                Podemos
-                                tener diferentes valores para el comportamiento (behaviour) de la tarea.</li>
-                            <ul>
-                                <li><strong>Type</strong> Valor numérico que referencia el tipo de comportamiento.</li>
-                                <li><strong>Duration</strong> Valor numérico que referencia a la duración que tendrá el
-                                    comportamiento de la tarea.</li>
-                            </ul>
+                            <li><strong>Type</strong> Valor numérico que referencia el tipo de comportamiento.
+                            </li>
+                            <li><strong>Duration</strong> Valor numérico que referencia a la duración que tendrá
+                                el
+                                comportamiento de la tarea.</li>
                         </ul>
+                    </ul>
 
-                    </li>
+                </li>
 
-                </ol>
-            </mat-expansion-panel>
-        </mat-accordion>
-
-
-
-        <mat-grid-list cols="2"  rowHeight="650"[gutterSize]="'10px'">
-            <mat-grid-tile>
-
-                <mat-tab-group>
-                    <mat-tab label="Subida manual">
-
-                        <form>
-
-                            <h2 class="centered-title" id="infoTarea"> {{labelInfo}}</h2><br>
-
-                            <mat-divider></mat-divider><br>
-
-                            <mat-form-field appearance="fill" class="col-5" style="background-color: #2c1435;">
-                                <mat-label>Start time</mat-label>
-                                <input matInput [formControl]="control" placeholder="Ej. 0, 1, 2..."
-                                    [(ngModel)]="start_time" name="start_time">
-                            </mat-form-field>
-
-                            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-
-
-                            <mat-form-field appearance="fill" id="priority" class="col-5">
-                                <mat-label>Priority</mat-label>
-                                <input matInput [formControl]="control" placeholder="Ej. 4, 5, 6..."
-                                    [(ngModel)]="priority" name="priority">
-                            </mat-form-field>
-
-                            <br><br>
-                            <mat-divider></mat-divider>
-                            <br>
-
-                            <h4 class="centered-title">Datos behaviour</h4><br>
-
-                            <mat-form-field appearance="fill" id="type" class="col-5">
-                                <mat-label>Behaviour Type</mat-label>
-                                <input matInput [formControl]="control" placeholder="Ej. 0, 1, 2..." type
-                                    [(ngModel)]="type" name="type">
-                            </mat-form-field>
-
-                            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-
-                            <mat-form-field appearance="fill" id="duration" class="col-5">
-                                <mat-label>Behaviour Duration</mat-label>
-                                <input matInput [formControl]="control" placeholder="Ej. 9, 10, 11..."
-                                    [(ngModel)]="duration" name="duration">
-                            </mat-form-field>
-
-                            <br>
-                            <mat-icon *ngIf="!control.valid && control.touched" style="color:red">error</mat-icon><span
-                                *ngIf="!control.valid && control.touched" style="color: red"> Debes rellenar todos los
-                                campos
-                                para
-                                crear la tarea. </span>
-                            <br>
-
-                            <button mat-raised-button class="btn-behaviour" (click)="almacenarDatosBehaviour()">Añadir
-                                datos
-                                behaviour</button><br><br>
-                            <mat-divider></mat-divider><br>
-                            <button mat-raised-button [disabled]="!control.valid" class="btn-centrado" color="primary"
-                                (click)="almacenarDatosTask()">Añadir tarea</button>
+            </ol>
+        </mat-expansion-panel>
+    </mat-accordion>
 
 
 
+    <mat-grid-list cols="2" rowHeight="650" [gutterSize]="'10px'">
+        <mat-grid-tile>
 
-                            <!-- 
+            <mat-tab-group>
+                <mat-tab label="Subida manual">
+
+                    <form>
+
+                        <h2 class="centered-title" id="infoTarea"> {{labelInfo}}</h2><br>
+
+                        <mat-divider></mat-divider><br>
+
+                        <mat-form-field appearance="fill" class="col-5" style="background-color: #2c1435;">
+                            <mat-label>Start time</mat-label>
+                            <input matInput [formControl]="control" placeholder="Ej. 0, 1, 2..."
+                                [(ngModel)]="start_time" name="start_time">
+                        </mat-form-field>
+
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+
+
+                        <mat-form-field appearance="fill" id="priority" class="col-5">
+                            <mat-label>Priority</mat-label>
+                            <input matInput [formControl]="control" placeholder="Ej. 4, 5, 6..." [(ngModel)]="priority"
+                                name="priority">
+                        </mat-form-field>
+
+                        <br><br>
+                        <mat-divider></mat-divider>
+                        <br>
+
+                        <h4 class="centered-title">Datos behaviour</h4><br>
+
+                        <mat-form-field appearance="fill" id="type" class="col-5">
+                            <mat-label>Behaviour Type</mat-label>
+                            <input matInput [formControl]="control" placeholder="Ej. 0, 1, 2..." type [(ngModel)]="type"
+                                name="type">
+                        </mat-form-field>
+
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+
+                        <mat-form-field appearance="fill" id="duration" class="col-5">
+                            <mat-label>Behaviour Duration</mat-label>
+                            <input matInput [formControl]="control" placeholder="Ej. 9, 10, 11..."
+                                [(ngModel)]="duration" name="duration">
+                        </mat-form-field>
+
+                        <br>
+                        <mat-icon *ngIf="!control.valid && control.touched" style="color:red">error</mat-icon>
+                        <span *ngIf="!control.valid && control.touched" style="color: red"> Debes rellenar todos
+                            los
+                            campos
+                            para
+                            crear la tarea. </span>
+                        <br>
+
+                        <button mat-raised-button class="btn-behaviour" (click)="almacenarDatosBehaviour()">Añadir
+                            datos
+                            behaviour</button><br><br>
+                        <mat-divider></mat-divider><br>
+                        <button mat-raised-button [disabled]="!control.valid" class="btn-centrado" color="primary"
+                            (click)="almacenarDatosTask()">Añadir tarea</button>
+
+
+
+
+                        <!-- 
                         <label for="infoTarea" id="infoTarea">{{labelInfo}}</label><br>
         
                         <label for="startTime">Start time</label><br>
@@ -140,40 +145,52 @@
         
                         <input id="clickMe2" type="button" value="Almacenar Datos Tarea" (click)="almacenarDatosTask()" /><br>
         -->
-                        </form>
+                    </form>
 
 
 
-                    </mat-tab>
-                    <mat-tab label=" Subida de archivo">
-                        <div class="subida-archivo-completa">
-                            <div class="file-select">
-                                <input #fileInput type='file' (change)="fileChanged($event)">
-                            </div><br>
+                </mat-tab>
+                <mat-tab label=" Subida de archivo">
+                    <div class="subida-archivo-completa">
+                        <div class="file-select">
+                            <input #fileInput type='file' (change)="fileChanged($event)">
+                        </div><br>
 
-                            <button mat-raised-button color="primary" (click)="uploadDocument(archivo)">Cargar
-                                datos</button>
-                        </div>
+                        <button mat-raised-button color="primary" (click)="uploadDocument(archivo)">Cargar
+                            datos</button>
+                    </div>
 
-                    </mat-tab>
-                </mat-tab-group>
+                </mat-tab>
+            </mat-tab-group>
 
 
 
-                <mat-grid-tile-header>
-                    Campos del JSON
-                </mat-grid-tile-header>
-            </mat-grid-tile>
-            <mat-grid-tile>
-                <pre><p>{{texto_JSONdatos}}</p></pre>
-                <mat-grid-tile-header>
-                    Datos cargados
-                </mat-grid-tile-header>
-            </mat-grid-tile>
-        </mat-grid-list>
+            <mat-grid-tile-header>
+                Campos del JSON
+            </mat-grid-tile-header>
+        </mat-grid-tile>
+        <mat-grid-tile>
+            <pre><p>{{texto_JSONdatos}}</p></pre>
+            <mat-grid-tile-header>
+                Datos cargados
+            </mat-grid-tile-header>
+        </mat-grid-tile>
+    </mat-grid-list>
 
+    <br>
+    <mat-divider></mat-divider>
+    <br>
+    <div class="chips-div">
+        <mat-chip-listbox aria-label="Scheduling selection">
+            <mat-chip-option color="dark" (click)="pulsadoFifo()">FIFO</mat-chip-option>
+            <mat-chip-option color="primary" (click)="pulsadoPriorityPreemtive()">Priority: Preemptive</mat-chip-option>
+            <mat-chip-option color="accent" (click)="pulsadoPriorityNonPreemptive()">Priority: Non Preemptive
+            </mat-chip-option>
+            <mat-chip-option color="warn" (click)="pulsadoRoundRobin()">Round-Robin</mat-chip-option>
+        </mat-chip-listbox>
     </div>
-
-
+    <br>
+    <mat-divider></mat-divider>
+    <br>
 
 </div>
