--- a/TFG/src/app/planificadores/planificadores-list/planificadores-list.component.html
+++ b/TFG/src/app/planificadores/planificadores-list/planificadores-list.component.html
@@ -4,7 +4,7 @@
 </div>
 
 
-<div>
+<div class="todos">
     <mat-accordion>
         <mat-expansion-panel (opened)="panelOpenState = true" (closed)="panelOpenState = false"
             style="background-color: aquamarine;color:black !important">
@@ -59,11 +59,10 @@
 
 
 
-    <mat-grid-list cols="2" rowHeight="650" [gutterSize]="'10px'">
+    <mat-grid-list cols="3" rowHeight="550" [gutterSize]="'5px'">
         <mat-grid-tile>
 
-            <mat-tab-group>
-                <mat-tab label="Subida manual">
+            
 
                     <form>
 
@@ -149,24 +148,32 @@
 
 
 
-                </mat-tab>
-                <mat-tab label=" Subida de archivo">
-                    <div class="subida-archivo-completa">
-                        <div class="file-select">
-                            <input #fileInput type='file' (change)="fileChanged($event)">
-                        </div><br>
+                
+           
+                    
 
-                        <button mat-raised-button color="primary" (click)="uploadDocument(archivo)">Cargar
-                            datos</button>
-                    </div>
 
-                </mat-tab>
-            </mat-tab-group>
 
 
 
             <mat-grid-tile-header>
-                Campos del JSON
+                Subida manual de datos
+            </mat-grid-tile-header>
+        </mat-grid-tile>
+        <mat-grid-tile>
+            
+            <div class="subida-archivo-completa">
+                <div class="file-select">
+                    <input #fileInput type='file' (change)="fileChanged($event)">
+                </div><br>
+                <p>Archivo seleccionado: {{ selectedFileName }}</p><br><br>
+
+                <button mat-raised-button color="primary" (click)="uploadDocument(archivo)">Cargar
+                    datos</button>
+            </div>
+
+            <mat-grid-tile-header>
+                Subida de archivo local
             </mat-grid-tile-header>
         </mat-grid-tile>
         <mat-grid-tile>
@@ -192,5 +199,17 @@
     <br>
     <mat-divider></mat-divider>
     <br>
+
+    <table mat-table *ngIf="generarTabla" [dataSource]="dataSource" class="tabla-planificador">
+
+        <ng-container *ngFor="let header of headersTabla; let i = index" [matColumnDef]="header">
+            <th mat-header-cell *matHeaderCellDef>{{ header }}</th>
+            <td mat-cell *matCellDef="let element">{{ element[i] }}</td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="headersTabla"></tr>
+        <tr mat-row [@tableAnimation] *matRowDef="let row; columns: headersTabla;"></tr>
+
+    </table>
 
 </div>
