--- a/TFG/src/app/ejemplo-list/ejemplo-list.component.html
+++ b/TFG/src/app/ejemplo-list/ejemplo-list.component.html
@@ -174,13 +174,28 @@
     <br>
     <br>
 
+    <!-- LEYENDA DE COLORES-->
+    <table *ngIf="generarTabla" class="legend">
+        <tr>
+          <td class="color-cell red"></td>
+          <td class="label-cell">Terminated</td>
+        </tr>
+        <tr>
+          <td class="color-cell green"></td>
+          <td class="label-cell">Running</td>
+        </tr>
+        <tr>
+          <td class="color-cell yellow"></td>
+          <td class="label-cell">Ready</td>
+        </tr>
+      </table>
  
 
     <table mat-table *ngIf="generarTabla" [dataSource]="dataSource" class="mat-elevation-z8">
 
         <ng-container *ngFor="let header of headersTabla; let i = index" [matColumnDef]="header">
             <th mat-header-cell *matHeaderCellDef>{{ header }}</th>
-            <td mat-cell *matCellDef="let element">{{ element[i] }}</td>
+            <td mat-cell *matCellDef="let element" [ngStyle]="{ color: (element[i] === 'Running') ? 'green' : (element[i] === 'Ready') ? 'yellow' : (element[i] === 'Terminated') ? 'red' : 'white' }">{{ element[i] }}</td>
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="headersTabla"></tr>
