--- a/TFG/src/app/planificadores/planificadores-list/planificadores-list.component.html
+++ b/TFG/src/app/planificadores/planificadores-list/planificadores-list.component.html
@@ -62,69 +62,69 @@
     <mat-grid-list cols="3" rowHeight="550" [gutterSize]="'5px'">
         <mat-grid-tile>
 
-            
-
-                    <form>
-
-                        <h2 class="centered-title" id="infoTarea"> {{labelInfo}}</h2><br>
-
-                        <mat-divider></mat-divider><br>
-
-                        <mat-form-field appearance="fill" class="col-5" style="background-color: #2c1435;">
-                            <mat-label>Start time</mat-label>
-                            <input matInput [formControl]="control" placeholder="Ej. 0, 1, 2..."
-                                [(ngModel)]="start_time" name="start_time">
-                        </mat-form-field>
-
-                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
 
-                        <mat-form-field appearance="fill" id="priority" class="col-5">
-                            <mat-label>Priority</mat-label>
-                            <input matInput [formControl]="control" placeholder="Ej. 4, 5, 6..." [(ngModel)]="priority"
-                                name="priority">
-                        </mat-form-field>
+            <form>
 
-                        <br><br>
-                        <mat-divider></mat-divider>
-                        <br>
+                <h2 class="centered-title" id="infoTarea"> {{labelInfo}}</h2><br>
 
-                        <h4 class="centered-title">Datos behaviour</h4><br>
+                <mat-divider></mat-divider><br>
 
-                        <mat-form-field appearance="fill" id="type" class="col-5">
-                            <mat-label>Behaviour Type</mat-label>
-                            <input matInput [formControl]="control" placeholder="Ej. 0, 1, 2..." type [(ngModel)]="type"
-                                name="type">
-                        </mat-form-field>
+                <mat-form-field appearance="fill" class="col-5" style="background-color: #2c1435;">
+                    <mat-label>Start time</mat-label>
+                    <input matInput [formControl]="control" placeholder="Ej. 0, 1, 2..." [(ngModel)]="start_time"
+                        name="start_time">
+                </mat-form-field>
 
-                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-
-                        <mat-form-field appearance="fill" id="duration" class="col-5">
-                            <mat-label>Behaviour Duration</mat-label>
-                            <input matInput [formControl]="control" placeholder="Ej. 9, 10, 11..."
-                                [(ngModel)]="duration" name="duration">
-                        </mat-form-field>
-
-                        <br>
-                        <mat-icon *ngIf="!control.valid && control.touched" style="color:red">error</mat-icon>
-                        <span *ngIf="!control.valid && control.touched" style="color: red"> Debes rellenar todos
-                            los
-                            campos
-                            para
-                            crear la tarea. </span>
-                        <br>
-
-                        <button mat-raised-button class="btn-behaviour" (click)="almacenarDatosBehaviour()">Añadir
-                            datos
-                            behaviour</button><br><br>
-                        <mat-divider></mat-divider><br>
-                        <button mat-raised-button [disabled]="!control.valid" class="btn-centrado" color="primary"
-                            (click)="almacenarDatosTask()">Añadir tarea</button>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
 
+                <mat-form-field appearance="fill" id="priority" class="col-5">
+                    <mat-label>Priority</mat-label>
+                    <input matInput [formControl]="control" placeholder="Ej. 4, 5, 6..." [(ngModel)]="priority"
+                        name="priority">
+                </mat-form-field>
+
+                <br><br>
+                <mat-divider></mat-divider>
+                <br>
+
+                <h4 class="centered-title">Datos behaviour</h4><br>
+
+                <mat-form-field appearance="fill" id="type" class="col-5">
+                    <mat-label>Behaviour Type</mat-label>
+                    <input matInput [formControl]="control" placeholder="Ej. 0, 1, 2..." type [(ngModel)]="type"
+                        name="type">
+                </mat-form-field>
+
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+
+                <mat-form-field appearance="fill" id="duration" class="col-5">
+                    <mat-label>Behaviour Duration</mat-label>
+                    <input matInput [formControl]="control" placeholder="Ej. 9, 10, 11..." [(ngModel)]="duration"
+                        name="duration">
+                </mat-form-field>
+
+                <br>
+                <mat-icon *ngIf="!control.valid && control.touched" style="color:red">error</mat-icon>
+                <span *ngIf="!control.valid && control.touched" style="color: red"> Debes rellenar todos
+                    los
+                    campos
+                    para
+                    crear la tarea. </span>
+                <br>
+
+                <button mat-raised-button class="btn-behaviour" (click)="almacenarDatosBehaviour()">Añadir
+                    datos
+                    behaviour</button><br><br>
+                <mat-divider></mat-divider><br>
+                <button mat-raised-button [disabled]="!control.valid" class="btn-centrado" color="primary"
+                    (click)="almacenarDatosTask()">Añadir tarea</button>
 
 
-                        <!-- 
+
+
+                <!-- 
                         <label for="infoTarea" id="infoTarea">{{labelInfo}}</label><br>
         
                         <label for="startTime">Start time</label><br>
@@ -144,13 +144,13 @@
         
                         <input id="clickMe2" type="button" value="Almacenar Datos Tarea" (click)="almacenarDatosTask()" /><br>
         -->
-                    </form>
+            </form>
 
 
 
-                
-           
-                    
+
+
+
 
 
 
@@ -161,7 +161,7 @@
             </mat-grid-tile-header>
         </mat-grid-tile>
         <mat-grid-tile>
-            
+
             <div class="subida-archivo-completa">
                 <div class="file-select">
                     <input #fileInput type='file' (change)="fileChanged($event)">
@@ -200,11 +200,28 @@
     <mat-divider></mat-divider>
     <br>
 
+    <!-- LEYENDA DE COLORES-->
+    <table *ngIf="generarTabla" class="legend">
+        <tr>
+            <td class="color-cell red"></td>
+            <td class="label-cell">Terminated</td>
+        </tr>
+        <tr>
+            <td class="color-cell green"></td>
+            <td class="label-cell">Running</td>
+        </tr>
+        <tr>
+            <td class="color-cell yellow"></td>
+            <td class="label-cell">Ready</td>
+        </tr>
+    </table>
+
+
     <table mat-table *ngIf="generarTabla" [dataSource]="dataSource" class="tabla-planificador">
 
         <ng-container *ngFor="let header of headersTabla; let i = index" [matColumnDef]="header">
             <th mat-header-cell *matHeaderCellDef>{{ header }}</th>
-            <td mat-cell *matCellDef="let element">{{ element[i] }}</td>
+            <td mat-cell *matCellDef="let element" [ngStyle]="{ color: (element[i] === 'Running') ? 'green' : (element[i] === 'Ready') ? 'yellow' : (element[i] === 'Terminated') ? 'red' : 'white' }">{{ element[i] }}</td>
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="headersTabla"></tr>
