--- a/TFG/src/app/planificadores/planificadores-list/planificadores-list.component.html
+++ b/TFG/src/app/planificadores/planificadores-list/planificadores-list.component.html
@@ -66,11 +66,11 @@
 
             <form>
 
-                <h2 class="centered-title" id="infoTarea"> {{labelInfo}}</h2><br>
+                <h2 class="centered-title" id="infoTarea"> {{labelInfo}}</h2>
 
                 <mat-divider></mat-divider><br>
 
-                <mat-form-field appearance="fill" class="col-5" style="background-color: #2c1435;">
+                <mat-form-field appearance="fill" class="col-5" style="color: #2c1435;">
                     <mat-label>Start time</mat-label>
                     <input matInput [formControl]="control" placeholder="Ej. 0, 1, 2..." [(ngModel)]="start_time"
                         name="start_time">
