--- a/TFG/src/app/planificadores/planificadores-list/planificadores-list.component.css
+++ b/TFG/src/app/planificadores/planificadores-list/planificadores-list.component.css
@@ -130,3 +130,11 @@ p.textoError {
   position: relative;
   right: -14%
 }
+
+
+.pretty-json{
+  overflow-y: auto;
+  height: 541px;
+  width: 100%; 
+  margin-top: 69%;
+}
